src/grammar/document/snapshots/yaml_parser__grammar__document__tests__yaml_directive-13.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives, \"%YAML 1.2 \\n\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: YAML
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 5
      line: 0
      column: 5
- token: separator
  stream: " "
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: yaml_version
  stream: "1.2"
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 9
      line: 0
      column: 9
- token: separator
  stream: " "
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 10
      line: 0
      column: 10
- token: break
  stream: "\n"
  span:
    start:
      index: 10
      line: 0
      column: 10
    end:
      index: 11
      line: 1
      column: 0
- value:
    explicit: false
    version: "1.2"
    tags: {}

