src/grammar/document/snapshots/yaml_parser__grammar__document__tests__yaml_directive-21.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives, \"%YAML 9999999999999.1\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: YAML
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 5
      line: 0
      column: 5
- token: separator
  stream: " "
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: error
  stream: "9999999999999.1"
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 21
      line: 0
      column: 21
- severity: error
  message: version number 9999999999999 is too large
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 19
      line: 0
      column: 19
  stream: "9999999999999"
- value:
    version: ~
    tags: {}

